--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter_screenutil: ^5.9.3
   firebase_core: ^3.10.1
-  connectivity_plus: ^6.1.2
+  connectivity_plus: ^5.0.2
   flutter_dotenv: ^5.2.1
 
 dev_dependencies:
@@ -70,6 +70,7 @@ flutter:
   assets:
     - .env.prod
     - .env.dev
+    - assest/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
@@ -96,3 +97,7 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
+flutter_assets:
+  assets_path: assest/images/
+  output_path: lib/core/constants/
+  filename: assets.dart
