--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,15 @@ dev_dependencies:
   very_good_analysis: ^7.0.0
   flutter_launcher_icons: ^0.14.3
 
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assest/images/app_icon.jpg"
+  adaptive_icon_background: "#ffffff"
+  adaptive_icon_foreground: "assest/images/sadio_app_icon.png"
+
+
+
 
 
 # For information on the generic Dart part of this file, see the
